Some install instructions in README